src/SelectMgr/SelectMgr_SensitiveEntitySet.hxx
@@ -37,20 +37,20 @@ class SelectMgr_SensitiveEntitySet : public BVH_PrimitiveSet<Standard_Real, 3>
 
 public:
 
-  SelectMgr_SensitiveEntitySet();
+  Standard_EXPORT SelectMgr_SensitiveEntitySet();
 
   virtual ~SelectMgr_SensitiveEntitySet() {};
 
   //! Adds new entity to the set and marks BVH tree for rebuild
-  void Append (const Handle(SelectMgr_SensitiveEntity)& theEntity);
+  Standard_EXPORT void Append (const Handle(SelectMgr_SensitiveEntity)& theEntity);
 
   //! Adds every entity of selection theSelection to the set and marks
   //! BVH tree for rebuild
-  void Append (const Handle(SelectMgr_Selection)& theSelection);
+  Standard_EXPORT void Append (const Handle(SelectMgr_Selection)& theSelection);
 
   //! Removes every entity of selection theSelection from the set
   //! and marks BVH tree for rebuild
-  void Remove (const Handle(SelectMgr_Selection)& theSelection);
+  Standard_EXPORT void Remove (const Handle(SelectMgr_Selection)& theSelection);
 
   //! Returns bounding box of entity with index theIdx
   virtual Select3D_BndBox3d Box (const Standard_Integer theIndex) const Standard_OVERRIDE;
@@ -68,7 +68,7 @@ public:
   virtual Standard_Integer Size() const Standard_OVERRIDE;
 
   //! Returns the entity with index theIndex in the set
-  const Handle(SelectMgr_SensitiveEntity)& GetSensitiveById (const Standard_Integer theIndex) const;
+  Standard_EXPORT const Handle(SelectMgr_SensitiveEntity)& GetSensitiveById (const Standard_Integer theIndex) const;
 
 private:
 
